Fix grecaptcha badge positioning and update related styles for improved visibility

--- a/css/style.css
+++ b/css/style.css
@@ -773,7 +773,9 @@ max-width: 40vw;;
 
 .grecaptcha-badge { 
   position: fixed !important;
-  right: 20px !important;
+  left: 20px !important;
+  right: auto !important;
   bottom: 20px !important;
+  top: auto !important;
   z-index: 1000 !important;
 }
